UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_AS_Agreement_Recipient__c/Contract_AS_Agreement_Recipient__c.object-meta.xml
<CustomObject>
    <label>Contract AS Agreement Recipient</label>
    <nameField>
        <displayFormat>CON-AS-AGR-REC-{000000}</displayFormat>
        <label>Contract AS Agreement Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract AS Agreement Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>