UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_AS_Agreement_Recipient__c/fields/Recipient_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Agreement</label>
    <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
    <relationshipLabel>Contract AS Agreement Recipients</relationshipLabel>
    <relationshipName>Contract_AS_Agreement_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>