UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_AS_Agreement_Recipient__c/fields/Recipient_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Agreement_Status__c</fullName>
    <formula>TEXT(Recipient_Agreement__r.echosign_dev1__Status__c)</formula>
    <label>Recipient Agreement Status</label>
    <type>Text</type>
</CustomField>