UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_AS_Agreement_Recipient__c/fields/Recipient_Contract__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract AS Agreement Recipients</relationshipLabel>
    <relationshipName>Contract_AS_Agreement_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>