UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_AS_Agreement_Recipient__c/fields/Recipient_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Contract_Status__c</fullName>
    <formula>TEXT(Recipient_Contract__r.Status)</formula>
    <label>Recipient Contract Status</label>
    <type>Text</type>
</CustomField>