UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_AS_Agreement_Recipient__c/fields/Recipient_User__c.field-meta.xml
<CustomField>
    <fullName>Recipient_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_AS_Agreement_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>