UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_AS_Agreement_Recipient__c/fields/Recipient_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_User_Email__c</fullName>
    <formula>Recipient_User__r.Email</formula>
    <label>Recipient User Email</label>
    <type>Text</type>
</CustomField>