UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_AS_Agreement_Recipient__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Recipient_Agreement__c</columns>
    <columns>Recipient_Agreement_Status__c</columns>
    <columns>Recipient_Contact__c</columns>
    <columns>Recipient_Contact_Email__c</columns>
    <columns>Recipient_Contract__c</columns>
    <columns>Recipient_Contract_Status__c</columns>
    <columns>Recipient_Email__c</columns>
    <columns>Recipient_Lead__c</columns>
    <columns>Recipient_Lead_Email__c</columns>
    <columns>Recipient_User__c</columns>
    <columns>Recipient_User_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>